fixed table alignment on a smaller screen

--- a/public/css/waiter.css
+++ b/public/css/waiter.css
@@ -74,9 +74,7 @@ td {
     text-align: center;
 }
 table {
-    width: 55em;
-    margin-right: 0px;
-    margin-left: 20px;
+    text-align: center;
 }
 th {
     border-radius: 6px;
